<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="account_info">Account Information</string>
    <string name="account_rank_0">Super User</string>
    <string name="account_rank_10">Manager User</string>
    <string name="account_rank_20">Common User</string>
    <string name="account_setting_group">Group</string>
    <string name="account_setting_name">Name</string>
    <string name="account_setting_rank">Rank</string>
    <string name="action_reply">Reply</string>
    <string name="action_share">Share</string>
    <string name="alarm_higher_temperature">Higher:</string>
    <string name="alarm_higher_temperature_hint">Lower temperature</string>
    <string name="alarm_lower_temperature">Lower:</string>
    <string name="alarm_lower_temperature_hint">Upper temperature</string>
    <string name="alarm_temperature_range">ROI Alarm Temperature Range</string>
    <string name="alreadyLogin">Logined</string>
    <string name="app_file_name_format">MAG-Mx-%1$s.apk</string>
    <string name="app_name">MAG-Mx Camera</string>
    <string name="app_name_skld">Infrared detector Mx</string>
    <string name="app_name_zhongxing">Infrared detector Mx</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="barScanMsg">Put the barcode in the center</string>
    <string name="barScanTitle">Scan</string>
    <string name="barcodeDescription">(For more up-to-date information, scan the barcode)</string>
    <string name="blackbody">Black body</string>
    <string name="blendMode">Blend mode</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="camera">Camera:</string>
    <string name="cameraConfigFailed">Fail to config visible camera</string>
    <string name="cameraOpenFailed">Fail to open visible camera</string>
    <string name="cameraPermission">Get visible camera Permission</string>
    <string name="camera_detached">Camera disconnected</string>
    <string name="camera_error">The mobile device is not supported for Camera2 interface</string>
    <string name="camera_type">MAG-Mx</string>
    <string name="camera_type_skld">MAG-S</string>
    <string name="cancel">Cancel</string>
    <string name="cancelAll">Cancel all</string>
    <string name="captureFail">Capture fail</string>
    <string name="captureIrSuccVisibleFail">Fail to capture visible</string>
    <string name="captureSucc">Capture succ</string>
    <string name="celsius_degree">℃</string>
    <string name="ceramic">Ceramic</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clay">clay</string>
    <string name="cloud">Server:</string>
    <string name="colon">:</string>
    <string name="commonUser">Common user</string>
    <string name="company">Home page:</string>
    <string name="concrete">Concrete</string>
    <string name="connectCloud">Connect cloud:</string>
    <string name="controlPort">Control port:</string>
    <string name="cooperated">Partner:</string>
    <string name="cooperatedPhone">Partner telephone:</string>
    <string name="default_group_name">CLOUD</string>
    <string name="deleteMediaYesOrNo">Are you sure to delete selected files?</string>
    <string name="demo_max_label">Max</string>
    <string name="demo_min_label">Min</string>
    <string name="deviceAddEdit">Device add/edit</string>
    <string name="deviceDelAction">Delete</string>
    <string name="deviceEditAction">Edit</string>
    <string name="deviceInfo">Information</string>
    <string name="deviceIp">IP:</string>
    <string name="deviceIsTransferring">New mobile device has been detected, it will maybe cost 1 minute to initialize, please wait</string>
    <string name="deviceMac">MAC:</string>
    <string name="deviceName">Name:</string>
    <string name="deviceSN">SN:</string>
    <string name="dimBlackPaint">Dim black paint</string>
    <string name="dimBlackPaper">Dim black paper</string>
    <string name="failFileAdded">%1$d item are not conform to the requirements</string>
    <string name="fileCreateDeviceNotAllowed">The device which generate this file is not belongs to current user</string>
    <string name="fileDeleted">File has been deleted</string>
    <string name="fileUploadFailed">Fail to upload file</string>
    <string name="fileUploadSuccess">Upload file successfully</string>
    <string name="fileUserStorageSpaceUsedUp">Storage space is not enough for current user</string>
    <string name="frozenEarth">Frozen earth</string>
    <string name="fwVersion">Firmware version:</string>
    <string name="generalInvalidData">Data sent is invalid</string>
    <string name="glass">glass</string>
    <string name="glossBlackPaint">Gloss black paint</string>
    <string name="glossBlackPaper">Gloss black paper</string>
    <string name="humanbody">Human body</string>
    <string name="hwVersion">Hardware version:</string>
    <string name="ice">Ice</string>
    <string name="imagePort">Image port:</string>
    <string name="inputOptional">Optional</string>
    <string name="inputRequired">Required</string>
    <string name="ipNotNumberError">IP address format error</string>
    <string name="isSavePwd">Remember</string>
    <string name="jpgNoLocationInfo">No location information</string>
    <string name="juge">Shanghai Magnity Technologies Co.,Ltd.</string>
    <string name="link_fail">Fail to connect camera</string>
    <string name="livePause">Pause</string>
    <string name="loadReferenceFail">Fail to load base reference</string>
    <string name="locationPermission">Get Location Permission</string>
    <string name="locationSwitch">Open location</string>
    <string name="locationSwitchIsNotOn">Location is not opened, it will cause locating inaccurate. Do you want to open now?</string>
    <string name="login">Login</string>
    <string name="loginFail">login fail</string>
    <string name="loginSucc">login succ</string>
    <string name="logout">Logout</string>
    <string name="logoutFail">Logout fail</string>
    <string name="logoutSucc">Logout succ</string>
    <string name="magPhone">Telephone:</string>
    <string name="magnity_network_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="magnity_network_notification_title_template">Magnity network: %1$s</string>
    <string name="managerUser">Manager user</string>
    <string name="manufacture">Manufacture:</string>
    <string name="mediaAnalysis">Analysis</string>
    <string name="mediaDelete">Delete</string>
    <string name="mediaExpand">Expand</string>
    <string name="mediaHouse">Item</string>
    <string name="mediaInfo">Information</string>
    <string name="mediaInfoDuration">Duration:</string>
    <string name="mediaInfoName">Name:</string>
    <string name="mediaInfoPath">Path:</string>
    <string name="mediaInfoResolution">Resolution:</string>
    <string name="mediaInfoSize">Size:</string>
    <string name="mediaInfoTime">Time:</string>
    <string name="mediaMap">Location</string>
    <string name="mediaSelectAll">Select all</string>
    <string name="mediaSelectedNum">%1$d item selected</string>
    <string name="mediaSetReference">Base</string>
    <string name="mediaSocialShare">Share</string>
    <string name="mediaTitle">%1$d item</string>
    <string name="mediaUnselectAll">Unselect</string>
    <string name="mediaUpload">Upload</string>
    <string name="mercury">Mercury</string>
    <string name="moreInfo">More info</string>
    <string name="moreSettings">More</string>
    <string name="msg_error">Error</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="newFilesAdded">%1$d item has added to task list</string>
    <string name="nickel">Nickel</string>
    <string name="no">No</string>
    <string name="noTask">None</string>
    <string name="no_action_cancel">Cancel</string>
    <string name="no_action_inform_body">No operation for 10 minutes, continue playing will consume the camera flow, do you want to continue playing?</string>
    <string name="no_action_inform_title">Warning</string>
    <string name="no_action_ok">Continue</string>
    <string name="no_newer_version">Already the latest version</string>
    <string name="notLogin">Not login</string>
    <string name="ok">OK</string>
    <string name="pauseAll">Pause all</string>
    <string name="roi_name">Name</string>
    <string name="roi_name_hint">21 max length</string>
    <string name="settingsCameraRotate">USB Device Rotate</string>
    <string name="settingsCameraRotate_0">No Rotate</string>
    <string name="settingsCameraRotate_180">Rotate 180° Clockwise</string>
    <string name="settingsCameraRotate_270">Rotate 270° Clockwise</string>
    <string name="settingsCameraRotate_90">Rotate 90° Clockwise</string>
    <string name="thermoscope_download">Download Thermoscope</string>
    <string name="thermoscope_download_tips">You have not install Thermoscope to analysis the file, download Thermoscope right now?</string>
    <string name="uploadTaskListEmpty">Upload task list is empty</string>
    <string name="userName">User name:</string>
    <string name="userPwd">Password:</string>
</resources>