<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/colorSettingsSubDialogBackground" android:layout_width="match_parent" android:layout_height="match_parent" android:keepScreenOn="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_item_vertical_margin" android:layout_marginBottom="@dimen/dialog_item_vertical_margin" android:text="@string/alarm_temperature_range" />
    <ImageView style="@style/DividerTheme4px" />
    <LinearLayout android:orientation="horizontal" android:id="@id/alarm_roi_name_layout" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_item_vertical_margin" android:paddingStart="20.0dp" android:paddingEnd="20.0dp">
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/roi_name" />
        <EditText android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:textColorHint="@android:color/darker_gray" android:gravity="center" android:id="@id/roi_name" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="" android:hint="@string/roi_name_hint" android:maxLength="21" android:inputType="text" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_item_vertical_margin" android:paddingStart="20.0dp" android:paddingEnd="20.0dp">
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_lower_temperature" />
        <EditText android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:textColorHint="@android:color/darker_gray" android:gravity="center" android:id="@id/alarm_lower_temp" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="3000.0" android:hint="@string/alarm_lower_temperature_hint" android:inputType="numberDecimal" />
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/celsius_degree" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dialog_item_vertical_margin" android:paddingStart="20.0dp" android:paddingEnd="20.0dp">
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/alarm_higher_temperature" />
        <EditText android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:textColorHint="@android:color/darker_gray" android:gravity="center" android:id="@id/alarm_higher_temp" android:layout_width="100.0dp" android:layout_height="wrap_content" android:text="3500.0" android:hint="@string/alarm_higher_temperature_hint" android:inputType="numberDecimal" />
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/celsius_degree" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingTop="10.0dp" android:paddingBottom="10.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="20.0dp" android:paddingEnd="20.0dp">
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/alarm_temp_cancel" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" />
        <TextView android:textSize="@dimen/dialog_caption_size" android:textColor="@android:color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/alarm_temp_ok" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
