<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorMediaBackground" android:padding="@dimen/media_item_margin" android:layout_width="match_parent" android:layout_height="match_parent" android:divider="@mipmap/horizontal_divider" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <GridView android:gravity="center" android:id="@id/id_photowall" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:horizontalSpacing="@dimen/media_item_margin" android:verticalSpacing="@dimen/media_item_margin" android:stretchMode="columnWidth" android:columnWidth="@dimen/media_item_expected_width" android:numColumns="auto_fit" android:layout_weight="1.0" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/id_media_menu" android:layout_width="match_parent" android:layout_height="wrap_content">
        <Button android:textColor="@drawable/button_select_color" android:id="@id/id_btn_media_map" android:background="@null" android:paddingTop="3.0dp" android:paddingBottom="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/mediaMap" android:drawableTop="@drawable/location" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@drawable/button_select_color" android:id="@id/id_btn_upload" android:background="@null" android:paddingTop="3.0dp" android:paddingBottom="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/mediaUpload" android:drawableTop="@drawable/upload" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@drawable/button_select_color" android:id="@id/id_btn_social_share" android:background="@null" android:paddingTop="3.0dp" android:paddingBottom="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/mediaSocialShare" android:drawableTop="@drawable/share" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@drawable/button_select_color" android:id="@id/id_btn_delete" android:background="@null" android:paddingTop="3.0dp" android:paddingBottom="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/mediaDelete" android:drawableTop="@drawable/delete" android:layout_weight="1.0" android:textAllCaps="false" />
        <Button android:textColor="@drawable/button_select_color" android:id="@id/id_btn_select_all" android:background="@null" android:paddingTop="3.0dp" android:paddingBottom="0.0dp" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/mediaSelectAll" android:drawableTop="@drawable/select_all" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>
