<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:padding="@dimen/setting_padding" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@android:color/black" android:id="@id/thermoscope_title" android:padding="@dimen/setting_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/thermoscope_download_tips" android:lineSpacingMultiplier="1.5" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@id/thermoscope_cancel_button" android:padding="@dimen/setting_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/thermoscope_download_button" />
    <TextView android:textColor="@android:color/holo_blue_dark" android:id="@id/thermoscope_download_button" android:padding="@dimen/setting_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thermoscope_download" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
