<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_gravity="center" android:id="@id/upload_hint" android:padding="20.0dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="124.0dp" android:text="@string/uploadTaskListEmpty" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <android.support.v7.widget.RecyclerView android:id="@id/upload_recycler_view" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/control_buttons" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/upload_hint" app:layout_constraintVertical_bias="0.0" />
    <LinearLayout android:orientation="horizontal" android:id="@id/control_buttons" android:background="@android:color/white" android:layout_width="match_parent" android:layout_height="80.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <Button android:id="@id/cancel_all" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/cancelAll" android:layout_weight="1.0" />
        <Button android:id="@id/pause_all" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_margin="10.0dp" android:text="@string/pauseAll" android:layout_weight="1.0" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
